--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ attrs==23.1.0
 coverage==7.3.1
 dill==0.3.7
 Django==4.1.6
+django-cors-headers==4.2.0
 django-js-asset==2.1.0
 django-mptt==0.14.0
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.4
 exceptiongroup==1.1.3
 inflection==0.5.1
@@ -22,6 +24,7 @@ phonenumberslite==8.13.22
 Pillow==10.0.1
 platformdirs==3.10.0
 pluggy==1.3.0
+PyJWT==2.8.0
 pylint==2.17.7
 pytest==7.4.2
 pytz==2023.3.post1
