--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ django-js-asset==2.1.0
 django-mptt==0.14.0
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
+drf-extra-fields==3.7.0
 drf-spectacular==0.26.4
 exceptiongroup==1.1.3
+filetype==1.2.0
 inflection==0.5.1
 iniconfig==2.0.0
 isort==5.12.0
