--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.14.0
 drf-extra-fields==3.7.0
 drf-spectacular==0.26.4
 exceptiongroup==1.1.3
+Faker==19.13.0
 filetype==1.2.0
 inflection==0.5.1
 iniconfig==2.0.0
@@ -28,10 +29,12 @@ pluggy==1.3.0
 PyJWT==2.8.0
 pylint==2.17.7
 pytest==7.4.2
+python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
 rpds-py==0.10.3
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.12.1
