--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 asgiref==3.7.2
 astroid==2.15.8
 attrs==23.1.0
+CacheControl==0.12.14
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cleo==2.1.0
 coverage==7.3.1
+crashtest==0.4.1
 dill==0.3.7
+distlib==0.3.8
 Django==4.2.1
 django-cors-headers==4.2.0
 django-js-asset==2.1.0
@@ -11,33 +18,61 @@ django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
 drf-extra-fields==3.7.0
 drf-spectacular==0.26.4
+dulwich==0.20.50
 exceptiongroup==1.1.3
 Faker==19.13.0
+filelock==3.13.1
 filetype==1.2.0
+html5lib==1.1
+idna==3.6
+importlib-metadata==7.0.1
 inflection==0.5.1
 iniconfig==2.0.0
 isort==5.12.0
+jaraco.classes==3.3.1
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+keyring==23.13.1
 lazy-object-proxy==1.9.0
+lockfile==0.12.2
 mccabe==0.7.0
+more-itertools==10.2.0
+msgpack==1.0.7
+mysqlclient==2.2.3
 packaging==23.1
+pexpect==4.9.0
 phonenumberslite==8.13.22
 Pillow==10.0.1
-platformdirs==3.10.0
+pkginfo==1.9.6
+platformdirs==2.6.2
 pluggy==1.3.0
+poetry==1.3.2
+poetry-core==1.4.0
+poetry-plugin-export==1.3.1
+ptyprocess==0.7.0
+pycparser==2.21
 PyJWT==2.8.0
 pylint==2.17.7
 pytest==7.4.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+rapidfuzz==3.6.1
 referencing==0.30.2
+requests==2.31.0
+requests-toolbelt==0.10.1
 rpds-py==0.10.3
+shellingham==1.5.4
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.12.1
+trove-classifiers==2024.1.31
 typing_extensions==4.8.0
 uritemplate==4.1.1
+urllib3==1.26.18
+virtualenv==20.21.1
+webencodings==0.5.1
 wrapt==1.15.0
+xattr==0.10.1
+zipp==3.17.0
